swagger documentation was added