@@ -8,17 +8,20 @@ import com.knubisoft.weatherdata.parser.jsontotable.ParserToTable;
 import com.knubisoft.weatherdata.requestdto.HistoricDataParams;
 import com.knubisoft.weatherdata.table.tablebuilder.TableBuilder;
 import com.knubisoft.weatherdata.table.tabledto.WeatherValues;
+import io.swagger.annotations.*;
 import lombok.SneakyThrows;
+import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
-import org.springframework.stereotype.Component;
 import org.springframework.validation.annotation.Validated;
-import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
 
 import javax.validation.Valid;
 import java.util.Arrays;
 import java.util.List;
+
+import static org.springframework.http.MediaType.APPLICATION_JSON;
 
 @RestController
 @Validated
@@ -35,9 +38,20 @@ public class TableController {
      * @return List of info.
      */
     @SneakyThrows
-    @GetMapping("/table")
-    public ResponseEntity<List<Object>> buildTableOfHistoricData(
-            @Valid @RequestBody HistoricDataParams historicDataParams) {
+    @ApiOperation(value = "Create a table by entered parameters", notes = "Returns detailed location and path name of PDF document.")
+    @ApiResponses(value = {
+            @ApiResponse(code = 200, message = "Successfully created", examples = @Example({@ExampleProperty(
+                    value = "[{hello: hola}, hola: hello]",
+                    mediaType = "application/json"
+            )})),
+            @ApiResponse(code = 404, message = "Incorrect parameters. Weather API cannot processes ones."),
+            @ApiResponse(code = 500, message = "An unexpected error has occurred.")
+
+    })
+    @PostMapping("/table")
+    public ResponseEntity<List<Object>> buildTableOfHistoricData(@Valid @RequestBody HistoricDataParams historicDataParams) {
+
+        ResponseEntity<List<Object>> result;
 
         String responseBody = apiConnection.connectHistoricData(
                 "https://visual-crossing-weather.p.rapidapi.com/history?" +
@@ -50,22 +64,21 @@ public class TableController {
 
         JsonNode node = new ObjectMapper().readTree(responseBody);
         if (node.path("executionTime").asText().equals("-1")) {
-            return ResponseEntity.ok(List.of(node.path("message").asText()));
+            result = ResponseEntity.ok(List.of(node.path("message").asText()));
+        } else {
+            List<WeatherValues> valuesList = new ParserToTable().readAllValues(
+                    historicDataParams.getLocation(), responseBody, WeatherValues.class);
+            String path = tableBuilder.generatePdf(
+                    valuesList,
+                    historicDataParams.getStartDateTime(),
+                    historicDataParams.getEndDateTime());
+            List<Object> resultBody = Arrays.asList(
+                    new ParserToObject().readLocationDetails(responseBody,
+                            historicDataParams.getLocation()), path);
+            result = ResponseEntity.ok(resultBody);
         }
 
-        List<WeatherValues> valuesList = new ParserToTable().readAllValues(
-                historicDataParams.getLocation(), responseBody, WeatherValues.class);
-
-        String path = tableBuilder.generatePdf(
-                valuesList,
-                historicDataParams.getStartDateTime(),
-                historicDataParams.getEndDateTime());
-
-        List<Object> resultBody = Arrays.asList(
-                new ParserToObject().readLocationDetails(responseBody,
-                        historicDataParams.getLocation()), path);
-
-        return ResponseEntity.ok(resultBody);
+        return result;
     }
 
 }
